[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/ArrowTrap.png" type="Texture" id=1]
[ext_resource path="res://World/ArrowTrap.gd" type="Script" id=2]

[node name="ArrowTrap" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
hframes = 2

[node name="FireInterval" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FireInterval" to="." method="_on_FireInterval_timeout"]
